--- a/core/globals.css
+++ b/core/globals.css
@@ -29,9 +29,7 @@
   --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  /* TODO: Add custom CSS vars for subcategory list 
-    - `--subcategory-list-heading` will control the color of the main category title
-    - `--subcategory-list-light-text` will control the color of the subcategory card text
-    - `--subcategory-list-border-radius` will control the border radius of the subcategory card
-  */
+  --subcategory-list-heading: hsl(96 25% 68%);
+  --subcategory-list-light-text: hsl(96 100% 30%);
+  --subcategory-list-border-radius: 2rem;
 }
